fix: alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
-body {
+.App {
+  text-align: center;
+  margin: auto;
   font-family: "montserrat";
 }
+
 
 form {
   max-width: 500px;
